1. JIRA SS-1386 fix : In Dashboard page the download button overflows on small screen.. 2. Report abuse popup small screen fix.

--- a/Source/SSWeb/src/main/webapp/resources/css/style-common.css
+++ b/Source/SSWeb/src/main/webapp/resources/css/style-common.css
@@ -7066,12 +7066,12 @@ span.review-complete-txt{
 }
 
 .rpa-btn {
-    margin: 10px 64px;
-    display: inline-block;
+	margin: 0px 15px 15px;
 }
 
 .rpa-overlay-btn-cont {
-    margin: 0 -30px;
+	padding: 0 15px;
+	margin: 0 -15px;
 }
 
 textarea.report-abuse-txtbox {
